chore: Initial setup for French spellcheck

--- a/en/Meetings/2018-05-16.md
+++ b/en/Meetings/2018-05-16.md
@@ -37,7 +37,7 @@ To view this update please view the [Working Group People github page](../Workin
 
 If you are interested in participating in a working group or to be a chair please let Ashley know. We are still looking for a government chair for the rules and the tools working group.
 
-Stephane Dufour from Statscan to be a co-chair for the tools working group?
+Stéphane Dufour from StatsCan to be a co-chair for the tools working group?
 
 ## 4. Working Group Alignment
 * One member of Ashley's team will attend each working group meeting to help move the discussion forward and ensure that the work in aligning with the Whitepaper
