--- a/fr/Rencontres/2018-05-16.md
+++ b/fr/Rencontres/2018-05-16.md
@@ -34,7 +34,7 @@ Pour voir cette mise à jour, veuillez consulter [la page Github des membres du 
 * Avantages pour les entreprises : Utiliser OSS et changer la culture, revenir à UnGC.
 * Comment faire l’entretien? Cycle de vie complet d’une source ouverte.
 
-Si vous souhaitez participer à un groupe de travail ou présider un groupe, veuillez en informer Ashley. Nous sommes toujours à la recherche d’un président issu du gouvernement pour le Groupe de travail sur les règles et les outils. Stéphane Dufour de StatCan coprésidera le Groupe de travail sur les outils?
+Si vous souhaitez participer à un groupe de travail ou présider un groupe, veuillez en informer Ashley. Nous sommes toujours à la recherche d’un président issu du gouvernement pour le Groupe de travail sur les règles et les outils. Stéphane Dufour de StatsCan coprésidera le Groupe de travail sur les outils?
 
 ## 4. Harmonisation des groupes de travail
 * Un membre de l’équipe d’Ashley assistera à la réunion de chaque groupe de travail pour faire avancer la discussion et veiller à ce que le travail soit harmonisé avec le livre blanc.
